--- a/RndTech.DevRel.App/appsettings.json
+++ b/RndTech.DevRel.App/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Survey2020SftpCredentials" : {
+    "Host":"sftp.host",
+    "Login":"username",
+    "Password":"password"
+  }
 }
