--- a/RndTech.DevRel.App/appsettings.json
+++ b/RndTech.DevRel.App/appsettings.json
@@ -9,5 +9,21 @@
     "Host":"sftp.host",
     "Login":"username",
     "Password":"password"
+  },
+  "enyimMemcached": {
+    "Servers": [
+      {
+        "Address": "memcached",
+        "Port": 11211
+      }
+    ],
+    "Authentication": {
+      "Type": "Enyim.Caching.Memcached.PlainTextAuthenticator",
+      "Parameters": {
+        "zone": "",
+        "userName": "username",
+        "password": "password"
+      }
+    }
   }
 }
