--- a/RndTech.DevRel.App/RndTech.DevRel.App.csproj
+++ b/RndTech.DevRel.App/RndTech.DevRel.App.csproj
@@ -17,7 +17,8 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.10" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="SSH.NET" Version="2016.1.0" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.4" />
+    <PackageReference Include="SSH.NET" Version="2020.0.0-beta1" />
   </ItemGroup>
 
   <ItemGroup>
