Большое обновление сайта

--- a/RndTech.DevRel.App/ClientApp/package.json
+++ b/RndTech.DevRel.App/ClientApp/package.json
@@ -3,26 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@skbkontur/react-icons": "^3.1.1",
-    "@skbkontur/react-ui": "^0.27.0",
-    "axios": "^0.18.0",
+    "@skbkontur/react-icons": "^4.3.2",
+    "@skbkontur/react-ui": "^2.9.0",
+    "@types/react-virtualized": "^9.21.10",
+    "axios": "^0.21.0",
     "classnames": "^2.2.6",
-    "jss": "^9.8.7",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-jss": "^8.6.1",
-    "react-router-dom": "^4.3.1",
+    "jss": "^10.5.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-jss": "^10.5.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts-ts": "^4.0.8",
     "recharts": "^1.3.2",
-    "typescript": "^3.1.1"
+    "rsuite": "^4.8.4",
+    "typescript": "^4.1.2"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.6",
     "@types/prop-types": "^15.5.6",
-    "@types/react": "^16.4.15",
-    "@types/react-dom": "^16.0.8",
-    "@types/react-jss": "^8.6.0",
-    "@types/react-router-dom": "^4.3.1",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-jss": "^10.0.0",
+    "@types/react-router-dom": "^5.1.6",
     "@types/recharts": "^1.1.0"
   },
   "scripts": {
