Отображение результатов 2020 года и сравнения 2019 и 2020 годов

--- a/RndTech.DevRel.App/RndTech.DevRel.App.csproj
+++ b/RndTech.DevRel.App/RndTech.DevRel.App.csproj
@@ -16,8 +16,9 @@
     <PackageReference Include="GroBuf" Version="1.6.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.4" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0-alpha.2" />
     <PackageReference Include="SSH.NET" Version="2020.0.0-beta1" />
   </ItemGroup>
 
@@ -30,6 +31,12 @@
     </None>
     <None Update="testdata.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <Content Remove="allData.json" />
+    <None Include="2020.json">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </None>
   </ItemGroup>
 
