--- a/RndTech.DevRel.App/appsettings.json
+++ b/RndTech.DevRel.App/appsettings.json
@@ -4,6 +4,9 @@
       "Default": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "SurveyDb": "Server=(localdb)\\mssqllocaldb;Database=EFGetStarted.ConsoleApp.NewDb;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*",
   "Survey2020SftpCredentials" : {
     "Host":"sftp.host",
