--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -16,3 +16,5 @@ jobs:
           heroku_app_name: "rndtechdevrel" #Must be unique in Heroku
           heroku_email: "slygric@gmail.com"
           usedocker: true
+	env:
+          DEVRELAPP_SETTINGS: ${{secrets.APP_SETTINGS}}
