--- a/src/RndTech.DevRel.App/ClientApp/package.json
+++ b/src/RndTech.DevRel.App/ClientApp/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jss": "^10.9.2",
+    "react-responsive": "^9.0.2",
     "react-scripts": "^5.0.1",
     "recharts": "^2.1.16",
     "rsuite": "^5.22.1",
