--- a/src/RndTech.DevRel.Importer/RndTech.DevRel.Importer.csproj
+++ b/src/RndTech.DevRel.Importer/RndTech.DevRel.Importer.csproj
@@ -9,7 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="CsvHelper" Version="30.0.1" />
-      <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0-alpha.1" />
+      <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0-silver.1" />
     </ItemGroup>
 
     <ItemGroup>
