--- a/src/RndTech.DevRel.App/RndTech.DevRel.App.csproj
+++ b/src/RndTech.DevRel.App/RndTech.DevRel.App.csproj
@@ -14,9 +14,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="EnyimMemcachedCore" Version="2.5.6" />
-        <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.1" />
-        <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0-silver.1" />
+        <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.5" />
+        <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.5" />
+        <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
