--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,10 @@
 name: Build and Deploy To CapRover
 
-on: [pull_request]
+on:
+    workflow_dispatch
+    push:
+        branches:
+            - master
 
 jobs:
   build_and_deploy:
