--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,6 @@
 name: Build and Deploy To CapRover
 
-on:
-    workflow_dispatch
-    push:
-        branches:
-            - master
+on: workflow_dispatch
 
 jobs:
   build_and_deploy:
